# dagre-rs

./: Cargo.toml  README.md
benches/: layout_performance.rs
examples/: README.md  performance_test.rs  test_comprehensive.rs  visualize_layout.rs
examples/output/: README.md
openspec/: project.md
src/: layout.rs  lib.rs
