[package]
name = "dagre-rs"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE.md"
readme = "README.md"
description = "Hierarchical Layout Calculation for directed graphs"
authors = ["Jan Arends <kontakt@jaads.de>"]
repository = "https://github.com/TangleGuard/dagre-rs"
keywords = ["graph", "layout", "hierarchical"]
categories = ["visualization", "graphics", "mathematics", "rendering", "algorithms"]
homepage = "https://github.com/TangleGuard/dagre-rs"

[dependencies]
petgraph = "0.8.3"

[dev-dependencies]
criterion = "0.5"

[[example]]
name = "visualize_layout"
path = "examples/visualize_layout.rs"

[[example]]
name = "test_comprehensive"
path = "examples/test_comprehensive.rs"

[[example]]
name = "performance_test"
path = "examples/performance_test.rs"

[[bench]]
name = "layout_performance"
harness = false
